navbar items alignment fixed

--- a/rwds.css
+++ b/rwds.css
@@ -10,37 +10,19 @@
   border-bottom: 1px solid black;
 }
 
-.navbar > .container,
-.navbar > .container-fluid,
-.navbar > .container-sm,
-.navbar > .container-md,
-.navbar > .container-lg,
-.navbar > .container-xl,
-.navbar > .container-xxl {
-  display: flex;
-  flex-wrap: inherit;
-  align-items: baseline;
-  /* justify-content: center; */
-}
 
-.navbar-brand-container {
-  display: flex;
-  padding-top: 0;
-  margin-left: 8em;
-  padding-bottom: 0;
-}
-
-@media (max-width: 1200px) {
-.navbar-brand-container {
-  margin-left: 0;
-}
-}
-  
 .navbar-brand.navbar-brand-logo {
-  display: inline;
+  display: flex;
   padding-top: 0;
   padding-bottom: 0;
   margin-right: 0;
+  margin-left: 5vw;
+}
+
+@media (max-width: 991px) {
+  .navbar-brand.navbar-brand-logo {
+    margin-left: 0;
+}
 }
 
 .navbar-logo {
@@ -49,7 +31,7 @@
   align-items: baseline;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 991px) {
 .navbar-logo {
   max-height: 100px;
   width: auto;
@@ -72,7 +54,30 @@
 }
 
 .nav-item {
-  margin-right: 1rem;
+  margin-top: 5rem; 
+}
+
+@media (max-width: 1200px) {
+  .nav-item {
+    margin-right: 0.5rem;
+}
+}
+
+@media (max-width: 991px) {
+  .nav-item {
+    margin-top: 0;
+    margin-right: 0rem;
+}
+}
+
+.aa-DetachedSearchButton {
+  margin-top: 5rem;
+}
+
+@media (max-width: 991px) {
+  .aa-DetachedSearchButton {
+    margin-top: 0;
+}
 }
 
 .dropdown-item {
